fix map-wrap width

--- a/goldtech-landing/assets/css/goldtech-landing.css
+++ b/goldtech-landing/assets/css/goldtech-landing.css
@@ -1997,6 +1997,14 @@ img, svg {
   }
 }
 
+@media (min-width: 1100px) {
+  .pre-footer {
+    max-width: 1080px;
+    margin-left: auto;
+    margin-right: auto;
+  }
+}
+
 .map-wrapper {
   overflow: hidden;
   z-index: -1;
